--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream",
     "publish": "lerna publish",
-    "clean": "lerna clean"
+    "clean": "lerna clean",
+    "coverage": "lerna run coverage"
   },
   "repository": {
     "type": "git",
