--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "lerna bootstrap --hoist walt-compiler",
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream",
+    "coverage": "lerna run coverage",
     "publish": "lerna publish",
     "clean": "lerna clean",
     "coverage": "lerna run coverage"
