--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-flow": "6.23.0",
+    "babel-register": "^6.26.0",
     "coveralls": "3.0.0",
     "cross-env": "5.1.3",
     "eslint-plugin-flowtype": "2.46.1",
@@ -65,6 +66,7 @@
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-replace": "2.0.0",
+    "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-uglify": "2.0.1",
     "tap-nyc": "1.0.3",
     "uglify-es": "3.0.17",
@@ -87,7 +89,7 @@
     "tap": false,
     "powerAssert": false,
     "require": [
-      "babel-register"
+      "./src/__tests__/_register.js"
     ],
     "babel": "inherit"
   },
