--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -19,11 +19,10 @@
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
     "nyc": "^11.7.1",
-    "prettier": "^1.12.0",
-    "walt-compiler": "^0.6.2"
+    "prettier": "^1.12.0"
   },
   "peerDependencies": {
-    "walt-compiler": "^0.5.3"
+    "walt-compiler": "^0.6.2"
   },
   "prettier": {
     "trailingComma": "es5"
