--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "ava": "0.24.0",
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.1.1",
+    "babel-eslint": "^8.1.1",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
@@ -52,11 +52,13 @@
     "babel-register": "^6.26.0",
     "coveralls": "3.0.0",
     "cross-env": "5.1.3",
+    "eslint": "^5.0.0",
     "eslint-plugin-flowtype": "2.46.1",
     "flow-bin": "0.66.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
     "nyc": "11.1.0",
+    "pirates": "^3.0.2",
     "prettier": "1.9.2",
     "rollup": "0.52.2",
     "rollup-plugin-babel": "3.0.2",
