--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -19,9 +19,7 @@
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
     "nyc": "^11.7.1",
-    "prettier": "^1.12.0"
-  },
-  "peerDependencies": {
+    "prettier": "^1.12.0",
     "walt-compiler": "^0.6.2"
   },
   "prettier": {
