--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -15,12 +15,16 @@
   ],
   "author": "Arthur Buldauskas",
   "license": "MIT",
+  "dependencies": {
+    "walt-compiler": "^0.6.2",
+    "walt-buildtools": "^0.0.1"
+  },
   "devDependencies": {
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
     "nyc": "^11.7.1",
     "prettier": "^1.12.0",
-    "walt-compiler": "^0.6.2"
+    "walt-buildtools": "^0.0.1"
   },
   "prettier": {
     "trailingComma": "es5"
