--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -8,6 +8,7 @@
     "validate": "npm run prettier && npm run lint && npm run flow",
     "tdd": "ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage-local": "nyc report --reporter=html",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
     "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js",
@@ -42,19 +43,22 @@
   "devDependencies": {
     "ava": "0.24.0",
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.1.1",
+    "babel-eslint": "^8.1.1",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-flow": "6.23.0",
+    "babel-register": "^6.26.0",
     "coveralls": "3.0.0",
     "cross-env": "5.1.3",
+    "eslint": "^5.0.0",
     "eslint-plugin-flowtype": "2.46.1",
     "flow-bin": "0.66.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
     "nyc": "11.1.0",
+    "pirates": "^3.0.2",
     "prettier": "1.9.2",
     "rollup": "0.52.2",
     "rollup-plugin-babel": "3.0.2",
@@ -64,10 +68,11 @@
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-replace": "2.0.0",
+    "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-uglify": "2.0.1",
     "tap-nyc": "1.0.3",
     "uglify-es": "3.0.17",
-    "walt-link": "^0.1.6"
+    "walt-buildtools": "^0.0.1"
   },
   "prettier": {
     "trailingComma": "es5"
@@ -86,7 +91,7 @@
     "tap": false,
     "powerAssert": false,
     "require": [
-      "babel-register"
+      "./src/__tests__/_register.js"
     ],
     "babel": "inherit"
   },
