--- a/packages/walt-cli/package.json
+++ b/packages/walt-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-cli",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "CLI for Walt",
   "main": "index.js",
   "scripts": {
@@ -18,9 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "meow": "^4.0.0",
+    "walt-buildtools": "^0.0.2",
     "walt-compiler": "^0.4.3",
-    "walt-link": "^0.1.6",
-    "walt-buildtools": "^0.0.1"
+    "walt-link": "^0.2.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
