--- a/packages/walt-docs/package.json
+++ b/packages/walt-docs/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --hot --inline",
-    "build": "webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/"
+    "build": "webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
+    "prettier": "prettier"
   },
   "private": true,
   "babel": {
@@ -45,9 +46,10 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.7",
+    "eslint": "^5.0.1",
     "file-loader": "0.11.2",
     "node-sass": "4.5.3",
-    "prettier": "^1.11.1",
+    "prettier": "^1.13.7",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.1",
     "sass-loader": "6.0.6",
@@ -65,6 +67,6 @@
     "react-dom": "15.6.1",
     "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.73.1",
-    "walt-compiler": "^0.4.3"
+    "walt-compiler": "^0.6.3"
   }
 }
