--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-link",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Links .walt WebAssembly programs",
   "main": "src/index.js",
   "scripts": {
@@ -17,8 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "invariant": "^2.2.4",
-    "walt-compiler": "^0.6.3",
-    "walt-buildtools": "^0.0.2"
+    "walt-buildtools": "^0.0.3",
+    "walt-compiler": "^0.7.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
