--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -10,6 +10,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coverage-local": "nyc report --reporter=html",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
+    "ndb": "ndb node_modules/ava/profile.js",
     "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
     "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js",
     "flow": "flow",
@@ -57,6 +58,7 @@
     "flow-bin": "0.66.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
+    "ndb": "^1.0.5",
     "nyc": "11.1.0",
     "pirates": "^3.0.2",
     "prettier": "1.9.2",
