--- a/packages/walt-parser-tools/package.json
+++ b/packages/walt-parser-tools/package.json
@@ -2,7 +2,7 @@
   "name": "walt-parser-tools",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/walt-parser-tools.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "ava"
   },
@@ -28,28 +28,13 @@
   },
   "devDependencies": {
     "ava": "0.24.0",
-    "babel-cli": "6.26.0",
-    "babel-eslint": "^8.1.1",
-    "babel-plugin-external-helpers": "6.22.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.6.0",
-    "babel-register": "^6.26.0",
     "cross-env": "5.1.3",
     "eslint": "^5.0.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
     "pirates": "^3.0.2",
     "prettier": "1.9.2",
-    "rollup": "0.52.2",
-    "rollup-plugin-babel": "3.0.2",
-    "rollup-plugin-commonjs": "8.0.2",
-    "rollup-plugin-eslint": "4.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "3.0.0",
-    "rollup-plugin-replace": "2.0.0",
-    "rollup-plugin-string": "^2.0.2",
-    "rollup-plugin-uglify": "2.0.1"
+    "walt-syntax": "^0.1.0"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -66,11 +51,7 @@
     "failFast": true,
     "failWithoutAssertions": false,
     "tap": false,
-    "powerAssert": false,
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
+    "powerAssert": false
   },
   "lint-staged": {
     "src/**/*.js": [
