--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-compiler",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "Alternative syntax for WebAssembly text format",
   "main": "dist/walt.js",
   "scripts": {
@@ -40,9 +40,9 @@
   "dependencies": {
     "curry": "1.2.0",
     "invariant": "2.2.2",
-    "wasm-types": "1.0.3",
-    "walt-parser-tools": "^0.1.0",
-    "walt-syntax": "^0.1.0"
+    "walt-parser-tools": "^0.1.1",
+    "walt-syntax": "^0.1.1",
+    "wasm-types": "1.0.3"
   },
   "devDependencies": {
     "ava": "0.24.0",
