--- a/packages/walt-plugin-syntax-closure/package.json
+++ b/packages/walt-plugin-syntax-closure/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "walt-plugin-closure-syntax",
+  "name": "walt-plugin-syntax-closure",
   "version": "0.1.0",
   "description": "Walt Syntax Closures",
-  "main": "dist/walt-plugin-closure-syntax.js",
+  "main": "dist/walt-plugin-syntax-closures.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
+    "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,13 @@
     "url": "https://github.com/ballercat/walt/issues"
   },
   "homepage": "https://github.com/ballercat/walt#readme",
-  "dependencies": {},
+  "dependencies": {
+    "walt-parser-tools": "^0.1.1",
+    "walt-syntax": "^0.1.1"
+  },
+  "peerDependencies": {
+    "walt-compiler": "^0.9.3"
+  },
   "devDependencies": {
     "ava": "0.24.0",
     "babel-cli": "6.26.0",
@@ -40,6 +48,7 @@
     "pirates": "^3.0.2",
     "prettier": "1.9.2",
     "rollup": "0.52.2",
+    "uglify-es": "3.0.17",
     "rollup-plugin-babel": "3.0.2",
     "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-eslint": "4.0.0",
@@ -47,7 +56,8 @@
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-string": "^2.0.2",
-    "rollup-plugin-uglify": "2.0.1"
+    "rollup-plugin-uglify": "2.0.1",
+    "walt-compiler": "^0.9.3"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -66,7 +76,7 @@
     "tap": false,
     "powerAssert": false,
     "require": [
-      "babel-register"
+      "./src/__tests__/_register.js"
     ],
     "babel": "inherit"
   },
