--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "curry": "1.2.0",
     "invariant": "2.2.2",
+    "nearley": "^2.15.1",
     "walt-parser-tools": "^0.1.1",
     "walt-syntax": "^0.1.1",
     "wasm-types": "1.0.3"
