--- a/packages/walt-syntax/package.json
+++ b/packages/walt-syntax/package.json
@@ -5,7 +5,8 @@
   "main": "dist/walt-syntax.js",
   "scripts": {
     "test": "ava",
-    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js"
+    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,11 @@
   "homepage": "https://github.com/ballercat/walt/tree/master/packages/walt-syntax/",
   "devDependencies": {
     "ava": "0.24.0",
+    "babel-eslint": "^9.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.0.0",
+    "eslint": "^5.4.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
     "prettier": "1.9.2",
