pass compiler tests!

--- a/packages/walt-syntax/package.json
+++ b/packages/walt-syntax/package.json
@@ -34,6 +34,7 @@
     "eslint": "^5.4.0",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
+    "moo": "^0.4.3",
     "prettier": "1.9.2",
     "rollup": "^0.64.1"
   },
