Enable rollup build, fix statics
- Fix regession in strings inside table/memory definition
- Enable rollup builds of grammar via local plugin

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "postinstall": "lerna bootstrap",
+    "postinstall": "lerna bootstrap --hoist walt-compiler",
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream",
     "coverage": "lerna run coverage",
