Fix coverage regressions
- Noop declarations without initializer

--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -116,6 +116,7 @@
     "exclude": [
       "src/**/print-node.js",
       "src/**/__tests__/*.js",
+      "src/**/grammar.js",
       "dist/*.js"
     ]
   }
