ignore build logic in coverage

--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -117,6 +117,7 @@
       "src/**/print-node.js",
       "src/**/__tests__/*.js",
       "src/**/grammar.js",
+      "src/parser/grammar/generator.js",
       "dist/*.js"
     ]
   }
