--- a/packages/walt-syntax/package.json
+++ b/packages/walt-syntax/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "ava",
     "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
+    "preversion": "npm run build",
     "lint": "eslint"
   },
   "repository": {
