--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -78,6 +78,7 @@
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-uglify": "2.0.1",
+    "rollup-plugin-walt-grammar": "^0.1.0",
     "tap-nyc": "1.0.3",
     "uglify-es": "3.0.17",
     "walt-buildtools": "^0.1.0"
@@ -94,14 +95,14 @@
     "source": [
       "src/**/*.js",
       "src/**/*.walt",
-      " src/**/*.ne"
+      "src/**/*.ne"
     ],
     "failFast": true,
     "failWithoutAssertions": false,
     "tap": false,
     "powerAssert": false,
     "require": [
-      "./src/__tests__/_register.js"
+      "../../_register.js"
     ],
     "babel": "inherit"
   },
