--- a/packages/walt-docs/package.json
+++ b/packages/walt-docs/package.json
@@ -68,6 +68,7 @@
     "react-dom": "15.6.1",
     "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.73.1",
-    "walt-compiler": "^0.10.2"
+    "walt-compiler": "^0.10.2",
+    "walt-plugin-syntax-closure": "^0.1.0"
   }
 }
