--- a/packages/walt-plugin-syntax-closure/package.json
+++ b/packages/walt-plugin-syntax-closure/package.json
@@ -28,8 +28,7 @@
   "homepage": "https://github.com/ballercat/walt#readme",
   "dependencies": {
     "walt-parser-tools": "^0.1.1",
-    "walt-syntax": "^0.1.1",
-    "walt-compiler": "^0.10.2"
+    "walt-syntax": "^0.1.1"
   },
   "devDependencies": {
     "ava": "0.24.0",
@@ -56,7 +55,8 @@
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-uglify": "2.0.1",
-    "rollup-plugin-walt-grammar": "^0.1.0"
+    "rollup-plugin-walt-grammar": "^0.1.0",
+    "walt-compiler": "^0.10.2"
   },
   "prettier": {
     "trailingComma": "es5",
