--- a/packages/walt-plugin-syntax-closure/package.json
+++ b/packages/walt-plugin-syntax-closure/package.json
@@ -7,7 +7,8 @@
     "test": "ava",
     "debug-container": "node --inspect-brk=\"$(hostname -I | xargs)\" node_modules/ava/profile.js",
     "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
-    "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js"
+    "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js",
+    "preversion": "npm run build && npm run build-prod"
   },
   "repository": {
     "type": "git",
