--- a/packages/walt-cli/package.json
+++ b/packages/walt-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-cli",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "CLI for Walt",
   "main": "index.js",
   "bin": {
@@ -20,9 +20,9 @@
   "author": "Arthur Buldauskas",
   "license": "MIT",
   "peerDependencies": {
+    "walt-buildtools": "^0.1.0",
     "walt-compiler": "^0.13.0",
-    "walt-link": "^0.4.1",
-    "walt-buildtools": "^0.1.0"
+    "walt-link": "^0.4.1"
   },
   "dependencies": {
     "meow": "^4.0.0"
@@ -31,8 +31,8 @@
     "ava": "^0.25.0",
     "prettier": "^1.11.1",
     "walt-buildtools": "^0.1.0",
-    "walt-compiler": "^0.13.0",
-    "walt-link": "^0.4.1"
+    "walt-compiler": "^0.15.0",
+    "walt-link": "^0.4.2"
   },
   "ava": {
     "files": [
