--- a/docs/package.json
+++ b/docs/package.json
@@ -36,5 +36,10 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "proseWrap": "always"
   }
 }
