update: api docs layout

--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,9 @@
     "format": "prettier --write '**/*.js'"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "gatsby": "^2.0.19",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
