--- a/packages/walt-docs/package.json
+++ b/packages/walt-docs/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server -d --hot --inline",
     "start-container": "webpack-dev-server -d --hot --inline --host=$(hostname -I | xargs)",
     "build": "webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
+    "build:prod": "cross-env NODE_ENV=production webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
     "prettier": "prettier",
     "preversion": "npm run build"
   },
@@ -57,11 +58,12 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
-    "webpack": "3.6.0",
+    "webpack": "^3.6.0",
     "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
     "codemirror": "5.29.0",
+    "cross-env": "^5.2.0",
     "prop-types": "15.5.10",
     "ramda": "0.25.0",
     "react": "15.6.1",
@@ -69,6 +71,7 @@
     "react-dom": "15.6.1",
     "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.73.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "walt-compiler": "^0.17.0",
     "walt-plugin-syntax-closure": "^0.2.8"
   }
