Following changes made per feedback: - Renamed "walt-docs" to "walt-explorer" at ~/packages/ - Made "build" linked to production instead of having two similar naming builds [build, development] & [build:prod, production] in ~packages/walt-explorer/package.json

--- a/packages/walt-explorer/package.json
+++ b/packages/walt-explorer/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "walt-docs",
+  "name": "walt-explorer",
   "version": "1.1.8",
   "description": "WAlt documentation",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --hot --inline",
     "start-container": "webpack-dev-server -d --hot --inline --host=$(hostname -I | xargs)",
-    "build": "webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
-    "build:prod": "cross-env NODE_ENV=production webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
+    "build": "cross-env NODE_ENV=production webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/",
     "prettier": "prettier",
     "preversion": "npm run build"
   },
