--- a/packages/walt-compiler/.babelrc
+++ b/packages/walt-compiler/.babelrc
@@ -12,7 +12,9 @@
   "plugins": [
      "external-helpers",
      "transform-runtime",
-     "transform-object-rest-spread"
+     "transform-object-rest-spread",
+     "transform-node-env-inline",
+     ["minify-dead-code-elimination", { "keepFnArgs": true }]
   ]
 }
 
