--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -13,7 +13,7 @@
     "coverage-local": "nyc report --reporter=html",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "debug-container": "node --inspect-brk=\"$(hostname -I | xargs)\" node_modules/ava/profile.js",
-    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
+    "build": "cross-env NODE_ENV=development node_modules/rollup/bin/rollup -c rollup.config.js",
     "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js",
     "flow": "flow",
     "lint": "eslint src",
