--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "devDependencies": {
+    "babel-plugin-minify-dead-code-elimination": "^0.5.0",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "babel-register": "^6.26.0",
     "lerna": "^2.11.0",
     "nearley": "^2.15.1",
@@ -41,6 +43,7 @@
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-string": "^2.0.2",
