Improved subscript and property access handling (#178)

--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -4,14 +4,16 @@
   "description": "Alternative syntax for WebAssembly text format",
   "main": "dist/walt.js",
   "scripts": {
-    "test": "nyc --cache ava --no-color --no-power-assert",
+    "test": "cross-env NODE_ENV=production npm run _test",
+    "_test": "nyc --cache ava --no-color --no-power-assert",
     "validate": "npm run prettier && npm run lint && npm run flow",
-    "tdd": "ava",
+    "tdd": "cross-env NODE_ENV=development npm run _tdd --",
+    "_tdd": "ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coverage-local": "nyc report --reporter=html",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "debug-container": "node --inspect-brk=\"$(hostname -I | xargs)\" node_modules/ava/profile.js",
-    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
+    "build": "cross-env NODE_ENV=development node_modules/rollup/bin/rollup -c rollup.config.js",
     "build-prod": "cross-env NODE_ENV=production node_modules/rollup/bin/rollup -c rollup.config.js",
     "flow": "flow",
     "lint": "eslint src",
@@ -53,6 +55,8 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "^8.1.1",
     "babel-plugin-external-helpers": "6.22.0",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.0",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
