--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -23,9 +23,11 @@
   },
   "devDependencies": {
     "ava": "^0.25.0",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "coveralls": "^3.0.0",
     "nyc": "^11.7.1",
-    "prettier": "^1.12.0"
+    "prettier": "^1.12.0",
+    "walt-compiler": "^0.19.0"
   },
   "prettier": {
     "trailingComma": "es5"
