Add a dedicated syntax tests & example harness

--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -99,7 +99,8 @@
     "source": [
       "src/**/*.js",
       "src/**/*.walt",
-      "src/**/*.ne"
+      "src/**/*.ne",
+      "syntax/**/*.walt"
     ],
     "failFast": true,
     "failWithoutAssertions": false,
